--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="blackBack btn">Click Me!</button>
-    <button class="yellowBack btn">No, Click Me!</button>
+    <button class="blackBack">Click Me!</button>
+    <button class="yellowBack">No, Click Me!</button>
   </body>
 </html>
